sortable.css
body {
	font-family: Alright Sans, sans-serif;
  background-color: #e9e7e8;
  overflow-x:hidden;
}

.m-entry__body ul>li:before, .mceContentBody ul>li:before, .feature-body ul>li:before, .m-stream__update__body ul>li:before, .m-explainer__card-content ul>li:before { 
  background: transparent; 
}

.sortable-list {
  overflow: auto;
  border-top: 5px solid #6d98a8;
  width: 40%;
}

.tab {
  -o-transition: 0.2s;
  -ms-transition: 0.2s;
  -moz-transition: 0.2s;
  -webkit-transition: 0.2s
  transition: 0.2s;
  font-size: .8em;
  text-align: center;
  height: 40px;
  text-transform: uppercase;
  line-height: 1;
  display: inline-block;
  cursor: pointer;
  width: 16.5%;
  margin: 15px 2px 0px 0px;
  padding: 1.2em .3em .1em;
  border: 0;
  font-family: Alright Sans, sans-serif;
  color: #fff;
  background-color: #a2bec7;
}

.tab:hover {
  background-color: #4c4e4d;
}

.selected {
  color: #fff;
  background-color: #6d98a8 !important;
}

#sortable {
  list-style-type: none;
}

#sortable ul {
  position: absolute;
  list-style-type: none;
	margin: 0 !important;
	padding: 0;
}

ul {
  margin: 0 !important;
}

#sortable li {
	margin: 0 3px 3px 3px;
	padding: 0.4em;
	font-size: 1.2em;
	font-weight: 600;
	color: #4c4e4d;
	background-color: #bfd1df;
	cursor: pointer;
	text-align: center;
  line-height: 1.5;
}

.correct {
	background-color: #7CCD7C !important;
}

.incorrect {
	background-color: #f44 !important;
}

button {
  -o-transition: 0.2s;
  -ms-transition: 0.2s;
  -moz-transition: 0.2s;
  -webkit-transition: 0.2s
  transition: 0.2s;
  font-size: .8em;
  height: 40px;
  text-transform: uppercase;
  line-height: 1;
  display: inline-block;
  cursor: pointer;
  width: 19.5%;
  margin: 15px 2px -5px 2px;
  padding: .8em .3em .6em;
  border: 0;
  font-family: Alright Sans, sans-serif;
  color: #fff;
  background-color: #4c4e4d;
}

button:hover {
  background-color: #6d98a8 !important;
}

#reset {
	width: 40%;
	height: 40px;
}

@media only screen and (min-width : 320px) and (max-width : 480px) {
  .sortable-list {
    width: 100%;
  }

  .tab {
    width: 25%;
  }

  #checkAnswers {
    width: 25%;
  }

  #showAnswers {
    width: 25%;
  }

  #reset {
    width: 100%;
  }
}

